--- a/Andthink_Simple/andthink_library/build.gradle
+++ b/Andthink_Simple/andthink_library/build.gradle
@@ -21,4 +21,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.jakewharton:butterknife:5.1.1'
+    compile 'com.loopj.android:android-async-http:1.4.6'
+    compile files('libs/fastjson-1.1.28.jar')
 }
