--- a/Andthink_Simple/app/build.gradle
+++ b/Andthink_Simple/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile project(':andthink_library')
+    compile 'com.makeramen:roundedimageview:2.0.1'
 }
