--- a/Andthink_Simple/app/src/main/AndroidManifest.xml
+++ b/Andthink_Simple/app/src/main/AndroidManifest.xml
@@ -2,6 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.andthink.andthink_simple" >
 
+    <!--Bmob所需要的权限-->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_LOGS"/>
+    <!--Bmob权限配置结束-->
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
