--- a/Andthink_Simple/andthink_library/build.gradle
+++ b/Andthink_Simple/andthink_library/build.gradle
@@ -25,4 +25,9 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.6'
     compile files('libs/fastjson-1.1.28.jar')
     compile files('libs/BmobSDK_V3.4.3_0820.jar')
+    compile('cn.trinea.android.view.autoscrollviewpager:android-auto-scroll-view-pager:1.1.2') {
+        exclude module: 'support-v4'
+    }
+    compile 'me.relex:circleindicator:1.1.3@aar'
+    compile files('libs/universal-image-loader-1.9.4.jar')
 }
